--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -2303,7 +2303,7 @@
           "conditions" : [
             "410100",
             "410102",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -2398,7 +2398,7 @@
           "conditions" : [
             "410100",
             "410101",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -2493,7 +2493,7 @@
           "conditions" : [
             "410110",
             "410102",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -2588,7 +2588,7 @@
           "conditions" : [
             "410110",
             "410101",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -2683,7 +2683,7 @@
           "conditions" : [
             "410120",
             "410102",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -2778,7 +2778,7 @@
           "conditions" : [
             "410120",
             "410101",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -2872,7 +2872,7 @@
         {
           "conditions" : [
             "411000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -3524,7 +3524,7 @@
         {
           "conditions" : [
             "412000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -4651,7 +4651,7 @@
         {
           "conditions" : [
             "413000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -5220,7 +5220,7 @@
           "conditions" : [
             "413100",
             "413101",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -5884,7 +5884,7 @@
           "conditions" : [
             "413200",
             "413201",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -6258,7 +6258,8 @@
       "generateConditions" : [
         {
           "conditions" : [
-            "414000"
+            "414000",
+            "414001"
           ]
         },
         {
@@ -6352,7 +6353,7 @@
         {
           "conditions" : [
             "414010",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -6669,7 +6670,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "11405",
@@ -6827,7 +6828,7 @@
         {
           "conditions" : [
             "415000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -7237,7 +7238,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "11505",
@@ -8240,7 +8241,7 @@
         {
           "conditions" : [
             "416000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -8650,7 +8651,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "11605",
@@ -9182,7 +9183,7 @@
         {
           "conditions" : [
             "417000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -9592,7 +9593,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "11705",
@@ -10317,7 +10318,7 @@
         {
           "conditions" : [
             "418000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -10727,7 +10728,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "11805",
@@ -11075,7 +11076,7 @@
         {
           "conditions" : [
             "419000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -11485,7 +11486,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "11905",
@@ -12203,7 +12204,7 @@
         {
           "conditions" : [
             "420000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -12613,7 +12614,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "12005",
@@ -13429,7 +13430,7 @@
         {
           "conditions" : [
             "421000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -13839,7 +13840,7 @@
         }
       ],
       "upDesc" : "对猫咪缺乏防备的人类，会有养猫的意愿。养猫的人越多，我们的行动越容易保持低调。",
-      "downDesc" : "收养一只猫咪，猫咪隐匿度提升"
+      "downDesc" : "花费20货币，令人类收养一只猫咪，隐匿度提升"
     },
     {
       "eventId" : "12105",
@@ -14794,7 +14795,7 @@
       "outOfTimeRecordId" : "0",
       "humanId" : "0",
       "repeatTime" : 100,
-      "emergencyId" : "0",
+      "emergencyId" : "23000",
       "isImportant" : 0,
       "priority" : 200,
       "preconditions" : [
@@ -14843,7 +14844,7 @@
         {
           "conditions" : [
             "430000",
-            "400070"
+            "459010"
           ]
         },
         {
@@ -16787,7 +16788,7 @@
     },
     {
       "eventId" : "14002",
-      "name" : "1号",
+      "name" : "1号-跳过序幕",
       "type" : 0,
       "consumeTime" : "3",
       "imageout" : "13000",
@@ -16969,7 +16970,7 @@
     },
     {
       "eventId" : "14004",
-      "name" : "3号",
+      "name" : "3号-神启",
       "type" : 0,
       "consumeTime" : "3",
       "imageout" : "13000",
