--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -3853,7 +3853,7 @@
       "isImportant" : 0,
       "priority" : 180,
       "preconditions" : [
-        "412042",
+        "0",
         "459005",
         "0"
       ],
@@ -3934,7 +3934,7 @@
         }
       ],
       "upDesc" : "我们应当把骨干猫咪安插到核心人物的家庭中，以便密切监视。",
-      "downDesc" : "需要猫咪凯修参与"
+      "downDesc" : "需要猫咪凯修参与，花费50人类货币"
     },
     {
       "eventId" : "11205",
@@ -5157,7 +5157,7 @@
         }
       ],
       "upDesc" : "我们应当把骨干猫咪安插到核心人物的家庭中，以便密切监视。",
-      "downDesc" : "需要猫咪科恩参与"
+      "downDesc" : "需要猫咪科恩参与，花费50人类货币"
     },
     {
       "eventId" : "11305",
