--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -370,7 +370,7 @@
         }
       ],
       "upDesc" : "国王：宫中四处都是叛贼的耳目，小心行事。 \n女仆：我一定会将这封信交给佩尔主教。",
-      "downDesc" : "猫咪每次行动都会导致隐匿度下降2点"
+      "downDesc" : "参与人类的行动会导致隐匿度下降2点"
     },
     {
       "eventId" : "10004",
