--- a/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
+++ b/Assets/Resources/ConfigAssets/PbJson/EventInfoConfig.pb.json
@@ -16960,7 +16960,7 @@
     },
     {
       "eventId" : "14003",
-      "name" : "2号-神启",
+      "name" : "2号-结局测试",
       "type" : 0,
       "consumeTime" : "3",
       "imageout" : "13000",
